exports[`linkUserToOrganizationFactory > should link user to organization 1`] = `
{
  "user_id": 1,
  "organization_id": 1,
  "is_external": false,
  "created_at": "4444-04-04T00:00:00.000Z",
  "updated_at": "4444-04-04T00:00:00.000Z",
  "verification_type": "bypassed",
  "has_been_greeted": false,
  "needs_official_contact_email_verification": false,
  "official_contact_email_verification_token": null,
  "official_contact_email_verification_sent_at": null,
  "verified_at": null,
  "is_dirigeant": false,
  "is_dirigeant_verified_at": null
}
`;

exports[`linkUserToOrganizationFactory > should mark a user as executive 1`] = `
{
  "user_id": 1,
  "organization_id": 1,
  "is_external": false,
  "created_at": "4444-04-04T00:00:00.000Z",
  "updated_at": "4444-04-04T00:00:00.000Z",
  "verification_type": "bypassed",
  "has_been_greeted": false,
  "needs_official_contact_email_verification": false,
  "official_contact_email_verification_token": null,
  "official_contact_email_verification_sent_at": null,
  "verified_at": null,
  "is_dirigeant": true,
  "is_dirigeant_verified_at": "4444-04-04T00:00:00.000Z"
}
`;
